--- a/trollscraft/src/app/app.component.html
+++ b/trollscraft/src/app/app.component.html
@@ -1,5 +1,4 @@
 <!--The whole content below can be removed with the new code.-->
-<div class="container-fluid">
-teste
-</div>
+<div class="bg-game"></div>
+<app-common></app-common>
 
